# lucida

./: .dockerignore  .gitignore  Dockerfile  README.md
doc/: instructions.ipynb
lucida/: CMakeLists.txt  Makefile
lucida/asyncthrift/fake/fakecmd_cpp/: FakeCMDServer.cpp
lucida/asyncthrift/fake/fakeimm/: FakeIMMHandler.h
lucida/botframework-interface/: Dockerfile  README.md
lucida/calendar/: Dockerfile  Makefile
lucida/calendar/CalendarClient/: CalendarClient.java  compile-Calendar-client.sh
lucida/calendar/src/main/java/calendar/: CAServiceHandler.java  CalendarDaemon.java  TextProcessor.java
lucida/commandcenter/: .gitignore  CMakeLists.txt  Dockerfile  app.py
lucida/commandcenter/apache/: apache.wsgi  install_apache.sh
lucida/commandcenter/apache/conf/: 000-default.conf
lucida/commandcenter/controllers/: Parser.py
lucida/djinntonic/: Dockerfile  Makefile
lucida/djinntonic/dig/: DIGHandler.h  DIGServer.cpp  Makefile
lucida/djinntonic/dig/test/: DIGClient.cpp
lucida/djinntonic/face/: FACEHandler.h  FACEServer.cpp  Makefile
lucida/djinntonic/face/test/: FACEClient.cpp
lucida/djinntonic/imc/: IMCHandler.h  IMCServer.cpp  Makefile  Makefile.config
lucida/djinntonic/imc/test/: IMCClient.cpp
lucida/djinntonic/tools/: install-caffe.sh
lucida/imagematching/: CMakeLists.txt  Dockerfile  README.md
lucida/imagematching/opencv_imm/: CMakeLists.txt  Makefile
lucida/imagematching/opencv_imm/server/: IMMHandler.h  IMMServer.cpp  Makefile
lucida/imagematching/opencv_imm/test/: IMMClient.cpp
lucida/musicservice/: CMakeLists.txt  Dockerfile  MusicConfig.py  helper.py
lucida/musicservice/server/: server.py
lucida/questionanswering/: Dockerfile
lucida/questionanswering/OpenEphyra/: Makefile  build.xml
lucida/questionanswering/OpenEphyra/src/lucida/main/: QADaemon.java
lucida/questionanswering/OpenEphyra/src/lucida/test/: QAClient.java
lucida/speechrecognition/: Dockerfile  README.md
lucida/speechrecognition/kaldi_gstreamer_asr/: Makefile  README.md  install_kaldi.sh  install_kaldi_tts.sh
lucida/weather/: CMakeLists.txt  Dockerfile  WeatherConfig.py
tools/: Dockerfile  README.md  apt_deps.sh  check_mongodb.cpp  docker_entrypoint.sh  install_mongodb.sh  lucida.sublime-project  python_requirements.txt
tools/deploy/: README.md  api_keys.yaml  asrmaster-controller-https.yaml  asrmaster-controller.yaml  asrworker-controller-https.yaml  asrworker-controller.yaml  ca-controller.yaml  cluster_up_linux.sh  dig-controller.yaml  face-controller.yaml  imc-controller.yaml  imm-controller.yaml  mongo-controller.yaml  ms-controller.yaml  qa-controller.yaml  start_services.sh  we-controller.yaml  web-controller-https.yaml  web-controller.yaml  web-service.yaml
tools/scripts/: install_apache.sh  install_node.sh  install_python.sh
